<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_id" />

    <AutoCompleteTextView
        android:id="@+id/clientId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/response_type" />

    <RadioGroup android:id="@+id/responseType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/responseType_code" >

        <RadioButton android:id="@+id/responseType_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responseType_code" />

        <RadioButton android:id="@+id/responseType_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responseType_token" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/send_request"
        android:onClick="onClick_SendRequest" />

</LinearLayout>
